--- a/Balance_Scale_All_Algorithms.ipynb
+++ b/Balance_Scale_All_Algorithms.ipynb
@@ -6,7 +6,7 @@
       "name": "Balance Scale - All Algorithms",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNiVOOTvaG0mng8FW8/eg1I",
+      "authorship_tag": "ABX9TyP/3Mkxz2V2w5R5P/zPK3zx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
         "kmeansHits= []\n",
         "kmeansErrors = []\n",
         "\n",
-        "for i in range(25):\n",
+        "for i in range(10):\n",
         "  x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=None, stratify=y)\n",
         "\n",
         "  dtModel = tree.DecisionTreeClassifier(criterion=\"entropy\")\n",
@@ -104,8 +104,6 @@
         "  mlpHits1.append(mlpShow1)\n",
         "  mlpErrors1.append(100 - mlpHits1[i])\n",
         "\n",
-        "  print(\"MLP de 10 e 8\", mlpShow1)\n",
-        "\n",
         "  mlpModel2 = MLPClassifier(hidden_layer_sizes=(8,6), activation='tanh', max_iter=3000)\n",
         "  mlpModel2 = mlpModel2.fit(x_train, y_train)\n",
         "  mlpresult2 = mlpModel2.predict(x_test)\n",
@@ -115,15 +113,14 @@
         "  mlpHits2.append(mlpShow2)\n",
         "  mlpErrors2.append(100 - mlpHits2[i])\n",
         "\n",
-        "  print(\"MLP de 8 e 6\", mlpShow2)\n",
-        "\n",
         "  kmeansModel = KMeans(n_clusters=3, max_iter=7000)\n",
         "  kmeansModel = kmeansModel.fit(x_train, y_train)\n",
         "  kmeansResult = kmeansModel.predict(x_test)\n",
         "  kmeansAcc = metrics.accuracy_score(kmeansResult, y_test)\n",
         "  kmeansShow = round(kmeansAcc * 100)\n",
         "\n",
-        "  print(\"K-Means\", kmeansShow)\n"
+        "  kmeansHits.append(kmeansShow)\n",
+        "  kmeansErrors.append(100 - kmeansHits[i])\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -136,6 +133,38 @@
         "colab": {}
       },
       "source": [
+        "successMLP1 = [x for x in range(len(mlpHits1))]\n",
+        "failureMLP1 = [x for x in range(len(mlpErrors1))]\n",
+        "pl.bar(successMLP1, mlpHits1, color='blue')\n",
+        "pl.bar(failureMLP1, mlpErrors1, color='orange')\n",
+        "pl.xlabel('época')\n",
+        "pl.ylabel('percentual')\n",
+        "pl.title('Gráfico de sucesso da MLP na primeira arquitetura')\n",
+        "pl.show()\n",
+        "\n",
+        "successMLP2 = [x for x in range(len(mlpHits2))]\n",
+        "failureMLP2 = [x for x in range(len(mlpErrors2))]\n",
+        "pl.bar(successMLP2, mlpHits2, color='blue')\n",
+        "pl.bar(failureMLP2, mlpErrors2, color='orange')\n",
+        "pl.xlabel('época')\n",
+        "pl.ylabel('percentual')\n",
+        "pl.title('Gráfico de sucesso da MLP na segunda arquitetura')\n",
+        "pl.show()\n",
+        "\n",
+        "successKMeans = [j for j in range(len(kmeansHits))]\n",
+        "failureKMeans = [j for j in range(len(kmeansErrors))]\n",
+        "\n",
+        "pl.bar(failureKMeans, kmeansErrors, color='orange')\n",
+        "pl.bar(successKMeans, kmeansHits, color='blue')\n",
+        "pl.xlabel('época')\n",
+        "pl.ylabel('percentual')\n",
+        "pl.title('Gráfico de sucesso do K-Means')\n",
+        "pl.show()\n",
+        "\n",
+        "print(mlpHits1)\n",
+        "print(mlpHits2)\n",
+        "print(kmeansHits)\n",
+        "\n",
         "df = pd.DataFrame({'Taxa de Acerto - Árvore de Decisão': decisionTreeHits, \n",
         "                   'Taxa de Erro - Árvore de Decisão': decisionTreeErrors, \n",
         "                   'Taxa de acerto - KNN(5)': knnHits5, 'Taxa de Erro - KNN(5)': knnErrors5,\n",
