--- a/Hayes_Roth_All_Algorithms.ipynb
+++ b/Hayes_Roth_All_Algorithms.ipynb
@@ -6,7 +6,7 @@
       "name": "Hayes-Roth All Algorithms",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMMWySOy8xlxJ3cx8WBOn+A",
+      "authorship_tag": "ABX9TyOHf1fwDjYkRi+0li0118Wn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +67,7 @@
         "x = dataset[test_col_names]\n",
         "y = dataset.label\n",
         "\n",
-        "for i in range(25):\n",
+        "for i in range(10):\n",
         "  x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=None, stratify=y)\n",
         "\n",
         "  dtModel = tree.DecisionTreeClassifier(criterion=\"entropy\")\n",
@@ -117,7 +117,7 @@
         "  mlpHits2.append(mlpShow2)\n",
         "  mlpErrors2.append(100 - mlpHits2[i])\n",
         "\n",
-        "  kmeansModel = KMeans(n_clusters=3, max_iter=5000)\n",
+        "  kmeansModel = KMeans(n_clusters=3, max_iter=2000, algorithm='elkan', random_state=None)\n",
         "  kmeansModel = kmeansModel.fit(x_train, y_train)\n",
         "  kmeansResult = kmeansModel.predict(x_test)\n",
         "  kmeansAcc = metrics.accuracy_score(kmeansResult, y_test)\n",
@@ -169,6 +169,16 @@
         "print(mlpHits1)\n",
         "print(mlpHits2)\n",
         "print(kmeansHits)\n",
+        "\n",
+        "pl.ylabel('Custo')\n",
+        "pl.xlabel('Iteração')\n",
+        "pl.title(\"Taxa de aprendizagem = \")\n",
+        "pl.plot(mlpModel1.loss_curve_)\n",
+        "\n",
+        "pl.ylabel('Custo')\n",
+        "pl.xlabel('Iteração')\n",
+        "pl.title(\"Taxa de aprendizagem = \")\n",
+        "pl.plot(mlpModel2.loss_curve_)\n",
         "\n",
         "df = pd.DataFrame({'Taxa de Acerto - Árvore de Decisão': decisionTreeHits, \n",
         "                   'Taxa de Erro - Árvore de Decisão': decisionTreeErrors, \n",
