--- a/Balance_Scale_All_Algorithms.ipynb
+++ b/Balance_Scale_All_Algorithms.ipynb
@@ -6,7 +6,7 @@
       "name": "Balance Scale - All Algorithms",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOoKEbV8iGZcbbxI367t+ir",
+      "authorship_tag": "ABX9TyPxpiVzGRWsgUVDy30n5gXF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,10 +30,10 @@
       "metadata": {
         "id": "qTivg3K-YQ90",
         "colab_type": "code",
-        "outputId": "8efea3c0-046c-4409-fa6b-d52a5e4389d8",
+        "outputId": "f946557c-df41-413a-e356-bb3820d8aeae",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 85
+          "height": 425
         }
       },
       "source": [
@@ -108,7 +108,7 @@
         "  mlpHits1.append(mlpShow1)\n",
         "  mlpErrors1.append(100 - mlpHits1[i])\n",
         "\n",
-        "  mlpModel2 = MLPClassifier(hidden_layer_sizes=(8,6), activation='tanh', max_iter=3000)\n",
+        "  mlpModel2 = MLPClassifier(hidden_layer_sizes=(8,6), activation='tanh', max_iter=1200)\n",
         "  mlpModel2 = mlpModel2.fit(x_train, y_train)\n",
         "  mlpresult2 = mlpModel2.predict(x_test)\n",
         "  mlpAcc2 = metrics.accuracy_score(mlpresult2, y_test)\n",
@@ -126,11 +126,31 @@
         "  kmeansHits.append(kmeansShow)\n",
         "  kmeansErrors.append(100 - kmeansHits[i])\n"
       ],
-      "execution_count": 0,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1200) reached and the optimization hasn't converged yet.\n",
+            "  % self.max_iter, ConvergenceWarning)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1200) reached and the optimization hasn't converged yet.\n",
+            "  % self.max_iter, ConvergenceWarning)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1200) reached and the optimization hasn't converged yet.\n",
+            "  % self.max_iter, ConvergenceWarning)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1200) reached and the optimization hasn't converged yet.\n",
+            "  % self.max_iter, ConvergenceWarning)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1200) reached and the optimization hasn't converged yet.\n",
+            "  % self.max_iter, ConvergenceWarning)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1200) reached and the optimization hasn't converged yet.\n",
+            "  % self.max_iter, ConvergenceWarning)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1200) reached and the optimization hasn't converged yet.\n",
+            "  % self.max_iter, ConvergenceWarning)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1200) reached and the optimization hasn't converged yet.\n",
+            "  % self.max_iter, ConvergenceWarning)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1200) reached and the optimization hasn't converged yet.\n",
+            "  % self.max_iter, ConvergenceWarning)\n",
+            "/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1200) reached and the optimization hasn't converged yet.\n",
+            "  % self.max_iter, ConvergenceWarning)\n",
             "/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1200) reached and the optimization hasn't converged yet.\n",
             "  % self.max_iter, ConvergenceWarning)\n",
             "/usr/local/lib/python3.6/dist-packages/sklearn/neural_network/_multilayer_perceptron.py:571: ConvergenceWarning: Stochastic Optimizer: Maximum iterations (1200) reached and the optimization hasn't converged yet.\n",
